Aapl 2.12 - May 15, 2005
========================
 -Documentation updates to trees, lists, compare classes, binary search tables
  and various other places.
 -Added iterator documentation and example.
 -Added proper includes for all examples, which now all compile.
 -Table comparisons now properly inherit the CompareT class, enabling table
  comparisons to call non-static element compare classes.
 -Removed the Deque structure. This structure was never used, incomplete and
  poorly tested. In most problems for which it is a candidate (large
  collections of objects in sequential ordering that are not required to be in
  contiguous memory), a simple replacement can easily be implemented with a
  small amount of code. Rather than be allowed to go unused and unmaintained,
  it is removed.
 -In the AvlTreeEl structures for Maps and Sets, getKey can be const.
 -Removed the non-standard malloc include.

Aapl 2.11 - May 30, 2004
========================
 -Moved from ints to longs for most integer values to get 64 bit numbers on 64
  bit machines. Fixes alignment problems on 64 bit machines.
 -Added AvliBasic, the linked version of the basic tree where the entire
  element is the key.
 -Updated documentation.

Aapl 2.10 -- Feb 5, 2004
========================
 -Fixes for two-stage lookup. Compiles with gcc-3.4
  Details at http://gcc.gnu.org/onlinedocs/gcc/Name-lookup.html#Name%20lookup
 -Fixed wrong Vector::Iter::pos() routines.
 -FsmGraph code removed from aapl, as an increasing amount of diverse
  specialization is required in applications. No longer feels like a general
  purpose template.

Aapl 2.9 -- Dec 8, 2003
=======================
 -Rewrote Deque to look and behave more like the rest of Aapl. Split it into
  Deque and DequeSimp. Deque supports complex classes with constructors and
  destructors. DequeSimp is for simple classes that can be coppied with
  memcpy.  Wrote stress tests for both.